# siwe-py

./: .gitignore  .gitmodules  LICENSE-APACHE  README.md  pyproject.toml
.github/workflows/: publish.yml
siwe/: __init__.py  defs.py  parsed.py  siwe.py
siwe/grammars/: eip4361.py
tests/: test_siwe.py
