[project]
name = "signinwithethereum"
version = "5.0.0"
description = "A Python implementation of Sign in with Ethereum (EIP-4361)."
license = "MIT OR Apache-2.0"
authors = [
  { name = "Jalil Wahdatehagh", email = "jalil@ethfollow.xyz" },
  { name = "Spruce Systems, Inc.", email = "hello@spruceid.com" },
  { name = "Payton Garland", email = "payton.r.g@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["SIWE", "EIP-4361", "Sign in with Ethereum"]
dependencies = [
  "abnf>=2.2,<3",
  "web3>=7.3.0,<8",
  "eth-account>=0.13.1,<0.14",
  "eth-utils>=2.2.0",
  "pydantic>=2.7,<3",
  "pydantic-core>=2,<3",
  "typing-extensions>=4,<5",
]

[project.urls]
Homepage = "https://siwe.xyz"
Repository = "https://github.com/signinwithethereum/siwe-py"
EIP = "https://github.com/ethereum/EIPs/blob/master/EIPS/eip-4361.md"

[dependency-groups]
dev = [
  "pytest>=8.1",
  "pyhumps>=3.8",
  "ruff>=0.4",
  "deptry>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["siwe"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
lint.select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "RUF", # ruff specific
  "PT",  # flake8-pytest-style
  "SIM", # flake8-simplify
  "D",   # pydocstyle
  "RUF", # ruff-specific rules
]

include = ["siwe/**"]
lint.ignore = ["D203", "D213"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.pytest.ini_options]
markers = [
  "network: tests that require live RPC access",
]
addopts = "-m 'not network'"
# web3 7.15.0 still imports websockets.legacy (deprecated in websockets 14.0).
# Drop this once web3 migrates to websockets.asyncio.
filterwarnings = [
  "ignore:websockets.legacy is deprecated:DeprecationWarning",
]
